package lm;

message Request {
	enum Type {
		SETPIXEL = 1; FILL = 2; CREATEFONT = 3; DESTROYFONT = 4; PRINTSTRING = 5;
		CREATESTRING = 6; DESTROYSTRING = 7; POPULATESTRING = 8; RENDERSTRING = 9;
		SWAPBUFFERS = 10;
	}

	required Type type = 1;

    optional SetPixel setpixel = 2;
    optional Fill fill = 3;

    optional CreateFont createfont = 4;
    optional DestroyFont destroyfont = 5;

    optional PrintString printstring = 6;

    optional CreateString createstring = 7;
    optional DestroyString destroystring = 8;
    optional PopulateString populatestring = 9;
    optional RenderString renderstring = 10;
    optional SwapBuffers swapbuffers = 11;
}

message Position {
	required uint32 x = 1;
	required uint32 y = 2;
}

message RGB {
	required uint32 r = 1;
	required uint32 g = 2;
	required uint32 b = 3;
}

message SetPixel {
	required Position pos = 1;

	required RGB rgb = 2;
}

message Fill {
	required RGB rgb = 1;
}


message CreateFont {
	required uint32 id = 1;
	required uint32 size = 2;
	required bytes font = 3;

}

message DestroyFont {
	required uint32 id = 1;
}


message PrintString {
	required Position pos = 1;

	required RGB rgb = 2;

	required uint32 font = 3;
    required bytes string = 4;
}


message CreateString {
	required uint32 id = 1;
}

message DestroyString {
	required uint32 id = 1;
}

message PopulateString {
	required uint32 id = 1;

	required uint32 font = 2;
    required bytes string = 3;
}

message RenderString {
	required uint32 id = 1;

	required Position pos = 2;
}


message SwapBuffers {
}


